# sentencepiece-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
examples/: bench.rs  inspect.rs
oracle/: bench_oracle.py  corpus_ascii.txt  corpus_unicode.txt  gen_oracle.py
src/: bpe.rs  error.rs  lib.rs  model.rs  normalizer.rs  processor.rs  proto.rs  trie.rs  unigram.rs  vocab.rs
tests/: oracle.rs
