[package]
name = "sentencepiece-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "From-scratch pure-Rust SentencePiece inference (encode/decode), differentially verified against the upstream C++/Python implementation."
license = "Apache-2.0"
readme = "README.md"
keywords = ["sentencepiece", "tokenizer", "nlp", "bpe", "unigram"]
categories = ["text-processing"]
repository = "https://github.com/VoiceLessQ/sentencepiece-rust"
homepage = "https://github.com/VoiceLessQ/sentencepiece-rust"
exclude = ["/oracle"]

[lib]
name = "sentencepiece_rust"
path = "src/lib.rs"

# v0.1 deliberately has ZERO runtime dependencies:
#   * the proto2 model format is parsed by a hand-written wire reader (no prost/protoc),
#   * BPE inference needs only the piece->id hashmap from std.
# Later milestones (Darts charsmap normalizer, Unigram Viterbi) stay std-only too.
[dependencies]

[dev-dependencies]
